@@ -123,6 +123,7 @@ importFrom(ggplot2,aes_)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,annotate)
 importFrom(ggplot2,annotation_custom)
+importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,coord_polar)
 importFrom(ggplot2,draw_key_path)
@@ -141,6 +142,7 @@ importFrom(ggplot2,geom_text)
 importFrom(ggplot2,geom_tile)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplotGrob)
+importFrom(ggplot2,ggplot_build)
 importFrom(ggplot2,ggproto)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
