@@ -1,6 +1,6 @@
 ##' get taxa name of a selected node
 ##'
-##' 
+##'
 ##' @title get_taxa_name
 ##' @param tree_view tree view
 ##' @param node node
@@ -9,7 +9,7 @@
 ##' @author Guangchuang Yu
 get_taxa_name <- function(tree_view=NULL, node) {
     tree_view %<>% get_tree_view
-    
+
     df <- tree_view$data
     sp <- get.offspring.df(df, node)
     res <- df[sp, "label"]
@@ -21,42 +21,48 @@ get_taxa_name <- function(tree_view=NULL, node) {
 
 ##' view a clade of tree
 ##'
-##' 
+##'
 ##' @title viewClade
-##' @param tree_view full tree view 
+##' @param tree_view full tree view
 ##' @param node internal node number
 ##' @param xmax_adjust adjust xmax
 ##' @return clade plot
+##' @importFrom ggplot2 ggplot_build
+##' @importFrom ggplot2 coord_cartesian
 ##' @export
 ##' @author Guangchuang Yu
 viewClade <- function(tree_view=NULL, node, xmax_adjust=0) {
     tree_view %<>% get_tree_view
-    
+
     cpos <- get_clade_position(tree_view, node=node)
-    with(cpos, tree_view+xlim(xmin, xmax*1.01 + xmax_adjust) + ylim(ymin, ymax))
+    xmax <- ggplot_build(tree_view)$layout$panel_ranges[[1]]$x.range[2]
+
+    ## tree_view+xlim(cpos$xmin, xmax + xmax_adjust) + ylim(cpos$ymin, cpos$ymax)
+    tree_view + coord_cartesian(xlim=c(cpos$xmin, xmax), ylim=c(cpos$ymin, cpos$ymax))
 }
+
 
 
 ##' collapse a clade
 ##'
-##' 
+##'
 ##' @title collapse
-##' @param tree_view tree view 
+##' @param tree_view tree view
 ##' @param node clade node
 ##' @return tree view
 ##' @export
 ##' @seealso expand
 ##' @author Guangchuang Yu
-collapse <- function(tree_view=NULL, node) {    
+collapse <- function(tree_view=NULL, node) {
     tree_view %<>% get_tree_view
-    
+
     df <- tree_view$data
 
     if (is.na(df$x[df$node == node])) {
         warning("specific node was already collapsed...")
         return(tree_view)
     }
-    
+
     sp <- get.offspring.df(df, node)
     sp.df <- df[sp,]
     df[node, "isTip"] <- TRUE
@@ -69,15 +75,15 @@ collapse <- function(tree_view=NULL, node) {
 
     df[sp, "x"] <- NA
     df[sp, "y"] <- NA
-    
+
     df <- reassign_y_from_node_to_root(df, node)
-    
+
     ## re-calculate branch mid position
     df <- calculate_branch_mid(df)
 
     ii <- which(!is.na(df$x))
     df$angle[ii] <- calculate_angle(df[ii,])$angle
-    
+
     tree_view$data <- df
     clade <- paste0("clade_", node)
     attr(tree_view, clade) <- sp.df
@@ -86,7 +92,7 @@ collapse <- function(tree_view=NULL, node) {
 
 ##' expand collased clade
 ##'
-##' 
+##'
 ##' @title expand
 ##' @param tree_view tree view
 ##' @param node clade node
@@ -96,7 +102,7 @@ collapse <- function(tree_view=NULL, node) {
 ##' @author Guangchuang Yu
 expand <- function(tree_view=NULL, node) {
     tree_view %<>% get_tree_view
-    
+
     clade <- paste0("clade_", node)
     sp.df <- attr(tree_view, clade)
     if (is.null(sp.df)) {
@@ -107,7 +113,7 @@ expand <- function(tree_view=NULL, node) {
     sp_y <- range(sp.df$y)
     ii <- which(df$y > df$y[node])
     df[ii, "y"] <- df[ii, "y"] + diff(sp_y)
-    
+
     sp.df$y <- sp.df$y - min(sp.df$y) + df$y[node]
     df[sp.df$node,] <- sp.df
 
@@ -123,7 +129,7 @@ expand <- function(tree_view=NULL, node) {
 
     ## re-calculate branch mid position
     df <- calculate_branch_mid(df)
-    
+
     tree_view$data <- calculate_angle(df)
     attr(tree_view, clade) <- NULL
     tree_view
@@ -131,16 +137,16 @@ expand <- function(tree_view=NULL, node) {
 
 ##' rotate 180 degree of a selected branch
 ##'
-##' 
+##'
 ##' @title rotate
-##' @param tree_view tree view 
+##' @param tree_view tree view
 ##' @param node selected node
 ##' @return ggplot2 object
 ##' @export
 ##' @author Guangchuang Yu
 rotate <- function(tree_view=NULL, node) {
     tree_view %<>% get_tree_view
-    
+
     df <- tree_view$data
     sp <- get.offspring.df(df, node)
     sp_idx <- with(df, match(sp, node))
@@ -168,9 +174,9 @@ rotate <- function(tree_view=NULL, node) {
 
 ##' flip position of two selected branches
 ##'
-##' 
+##'
 ##' @title flip
-##' @param tree_view tree view 
+##' @param tree_view tree view
 ##' @param node1 node number of branch 1
 ##' @param node2 node number of branch 2
 ##' @return ggplot2 object
@@ -178,7 +184,7 @@ rotate <- function(tree_view=NULL, node) {
 ##' @author Guangchuang Yu
 flip <- function(tree_view=NULL, node1, node2) {
     tree_view %<>% get_tree_view
-    
+
     df <- tree_view$data
     p1 <- with(df, parent[node == node1])
     p2 <- with(df, parent[node == node2])
@@ -220,7 +226,7 @@ flip <- function(tree_view=NULL, node1, node2) {
     df[ii, "y"] <- NA
     currentNode <- unlist(as.vector(sapply(anc, getChild.df, df=df)))
     currentNode <- currentNode[!currentNode %in% anc]
-    
+
     tree_view$data <- re_assign_ycoord_df(df, currentNode)
     tree_view$data <- calculate_angle(tree_view$data)
     tree_view
@@ -229,7 +235,7 @@ flip <- function(tree_view=NULL, node1, node2) {
 
 ##' scale clade
 ##'
-##' 
+##'
 ##' @title scaleClade
 ##' @param tree_view tree view
 ##' @param node clade node
@@ -242,50 +248,50 @@ flip <- function(tree_view=NULL, node1, node2) {
 ##' @author Guangchuang Yu
 scaleClade <- function(tree_view=NULL, node, scale=1, vertical_only=TRUE) {
     tree_view %<>% get_tree_view
-    
+
     if (scale == 1) {
         return(tree_view)
     }
-    
+
     df <- tree_view$data
     sp <- get.offspring.df(df, node)
     sp.df <- df[sp,]
-    
+
     ## sp_nr <- nrow(sp.df)
     ## span <- diff(range(sp.df$y))/sp_nr
-    
+
     ## new_span <- span * scale
     old.sp.df <- sp.df
     sp.df$y <- df[node, "y"] + (sp.df$y - df[node, "y"]) * scale
     if (! vertical_only) {
         sp.df$x <- df[node, "x"] + (sp.df$x - df[node, "x"]) * scale
     }
-    
+
     scale_diff.up <- max(sp.df$y) - max(old.sp.df$y)
     scale_diff.lw <- min(sp.df$y) - min(old.sp.df$y)
-    
+
     ii <- df$y > max(old.sp.df$y)
     if (sum(ii) > 0) {
         df[ii, "y"] <- df[ii, "y"] + scale_diff.up
     }
-    
+
     jj <- df$y < min(old.sp.df$y)
     if (sum(jj) > 0) {
         df[jj, "y"] <- df[jj, "y"] + scale_diff.lw
     }
-    
+
     df[sp,] <- sp.df
-    
+
     if (! "scale" %in% colnames(df)) {
         df$scale <- 1
     }
     df[sp, "scale"] <- df[sp, "scale"] * scale
 
     df <- reassign_y_from_node_to_root(df, node)
-    
+
     ## re-calculate branch mid position
     df <- calculate_branch_mid(df)
-    
+
     tree_view$data <- calculate_angle(df)
     tree_view
 }
